<resources>
    <string name="app_name">TMDB App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_primary">Sample of title text</string>
    <string name="text_subtitle">Sample of subtitle text</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Maps</string>
    <string name="menu_favorite">Favorite</string>
    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title_favorite">Favorite</string>
    <string name="image_description">Image</string>
    <string name="baseUrlImage">https://image.tmdb.org/t/p/w500%s</string>
    <string name="popularity">POPULARITY</string>
    <string name="overview">OVERVIEW</string>
    <string name="release">RELEASE</string>
    <string name="rating">RATING</string>
    <string name="todo">TODO</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
</resources>